public class EjemploOrdenes {

  public static void main(String[] args) {}
}
