public class Producto {

  private String fabricante;
  private String nombre;
  private int precio;

  // Constructor
  public Producto(String fabricante, String nombre, int precio) {
    this.fabricante = fabricante;
    this.nombre = nombre;
    this.precio = precio;
  }

  public String getFabricante() {
    return fabricante;
  }

  public String getNombre() {
    return nombre;
  }

  public int getPrecio() {
    return precio;
  }
}
